Creacios visual de los grafos

--- a/src/app/graphs/administrate/administrate.component.html
+++ b/src/app/graphs/administrate/administrate.component.html
@@ -1,1 +1,2 @@
-<div class="graph"></div>
+<a class="btn btn-danger btn-lg" (click)="outTicket()">Touch me ahhh!</a>
+<div class="container graph"></div>
