--- a/src/app/graphs/main/file/file.component.html
+++ b/src/app/graphs/main/file/file.component.html
@@ -1,6 +1,11 @@
-<ngx-dropzone (change)="onSelect($event)">
-    <ngx-dropzone-label>Drag and drop your graph file</ngx-dropzone-label>
-    <ngx-dropzone-preview *ngFor="let f of files" [removable]="true" (removed)="onRemove(f)">
-        <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
-    </ngx-dropzone-preview>
-</ngx-dropzone>
+<div class="card h-100">
+    <div class="card-body">
+        <h5 class="card-title">Archivo</h5>
+        <ngx-dropzone (change)="onSelect($event)">
+            <ngx-dropzone-label>Arrastre y suelte aqui su grafo</ngx-dropzone-label>
+            <ngx-dropzone-preview *ngFor="let f of files" [removable]="true" (removed)="onRemove(f)">
+                <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
+            </ngx-dropzone-preview>
+        </ngx-dropzone>
+    </div>
+</div>
