--- a/src/app/graphs/main/random/random.component.html
+++ b/src/app/graphs/main/random/random.component.html
@@ -1,1 +1,9 @@
-<button class="btn btn-primary" (click)="setRandomGraph()"></button>
+<div class="card h-100">
+    <div class="card-body">
+        <h5 class="card-title">Aleatorio</h5>
+        <p class="card-text">Obtener un grafo aleatorio</p>
+    </div>
+    <div class="card-footer">
+        <a class="btn btn-primary btn-sm" (click)="setRandomGraph()">Get Random</a>
+    </div>
+</div>
