--- a/src/app/graphs/main/list/list.component.html
+++ b/src/app/graphs/main/list/list.component.html
@@ -1,16 +1,14 @@
-<table class="table table-dark table-striped">
-    <thead>
-        <tr>
-            <th>Nombre</th>
-            <th>Nodos</th>
-            <th>Enlaces</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let graph of listGraphs" (click)="setGraph(graph)">
-            <th>{{ graph.name }}</th>
-            <th>{{ graph.nodes.length }}</th>
-            <th>{{ graph.edges.length }}</th>
-        </tr>
-    </tbody>
-</table>
+<div class="row">
+    <div class="col-3 py-2" *ngFor="let graph of listGraphs">
+        <div class="card h-100">
+            <div class="card-body">
+                <h5 class="card-title">{{ graph.name }}</h5>
+                <p class="card-text">N° de Nodos: {{ graph.nodes.length }}</p>
+                <p class="card-text">N° de Enlaces: {{ graph.edges.length }}</p>
+            </div>
+            <div class="card-footer">
+                <a class="btn btn-primary btn-sm" (click)="setGraph(graph)">Select</a>
+            </div>
+        </div>
+    </div>
+</div>
