--- a/src/app/graphs/main/main.component.html
+++ b/src/app/graphs/main/main.component.html
@@ -1,14 +1,14 @@
-<div class="container-md p-2">
+<div class="container-md py-2">
+    <div class="p-3 mb-2 bg-primary text-white">Grafo Nuevo</div>
     <div class="row">
-        <div class="col-6">
-            <app-list [list]="graphs"></app-list>
-        </div>
-        <div class="col-6">
+        <div class="col-3 py-2">
             <app-file></app-file>
         </div>
-        <div class="col-6">
+        <div class="col-3 py-2">
             <app-random></app-random>
         </div>
     </div>
+    <div class="p-3 mb-2 bg-primary text-white">Grafo Existente</div>
+    <app-list [list]="graphs"></app-list>
     <a class="btn btn-success" href="administrate">Iniciar</a>
 </div>
