--- a/src/app/graphs/main/random/random.component.html
+++ b/src/app/graphs/main/random/random.component.html
@@ -4,6 +4,6 @@
         <p class="card-text">Obtener un grafo aleatorio</p>
     </div>
     <div class="card-footer">
-        <a class="btn btn-primary btn-sm" (click)="setRandomGraph()">Get Random</a>
+        <a class="btn btn-primary btn-sm" (click)="setRandomGraph()">Elegir</a>
     </div>
 </div>
