--- a/src/app/graphs/main/file/file.component.html
+++ b/src/app/graphs/main/file/file.component.html
@@ -8,4 +8,7 @@
             </ngx-dropzone-preview>
         </ngx-dropzone>
     </div>
+    <div class="card-footer">
+        <a class="btn btn-primary btn-sm" (click)="setGraph()">Elegir</a>
+    </div>
 </div>
