--- a/src/app/graphs/main/list/list.component.html
+++ b/src/app/graphs/main/list/list.component.html
@@ -7,7 +7,7 @@
                 <p class="card-text">N° de Enlaces: {{ graph.edges.length }}</p>
             </div>
             <div class="card-footer">
-                <a class="btn btn-primary btn-sm" (click)="setGraph(graph)">Select</a>
+                <a class="btn btn-primary btn-sm" (click)="setGraph(graph)">Elegir</a>
             </div>
         </div>
     </div>
