--- a/src/app/graphs/main/main.component.html
+++ b/src/app/graphs/main/main.component.html
@@ -21,5 +21,5 @@
     </div>
     <div class="p-3 mb-2 bg-primary text-white">Grafo Existente</div>
     <app-list [list]="graphs"></app-list>
-    <a class="btn btn-success" href="administrate">Iniciar</a>
+    <a class="btn btn-success" [routerLink]="['/administrate']">Iniciar</a>
 </div>
