--- a/src/app/graphs/administrate/options/options.component.html
+++ b/src/app/graphs/administrate/options/options.component.html
@@ -11,7 +11,7 @@
 <form [formGroup]="edgeForm" (ngSubmit)="sendEdgeForm()">
     <legend>Aristas</legend>
     <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="floatingInput" formControlName="weight" />
+        <input type="number" class="form-control" id="floatingInput" formControlName="weight" />
         <label for="floatingInput">Peso de la arista</label>
     </div>
     <div class="btn-group w-100 py-2" role="group">
